save create vehicle